add some new import mappings

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,7 @@
 {
     "imports": {
-        "ChildProcess/": "./ChildProcess/"
+        "ChildProcess/": "./ChildProcess/",
+        "map/": "./map/",
+        "fp/": "./fp/"
     }
 }
