structural shuffling: names, imports, exports

--- a/deno/evm/node/docker/Dockerfile
+++ b/deno/evm/node/docker/Dockerfile
@@ -1,8 +1,9 @@
 FROM denoland/deno:alpine-1.43.1
 RUN apk --update add git tar
-WORKDIR /w4
-COPY . .
-WORKDIR /w4/lib/node/docker
+WORKDIR /evm/lib
+COPY ./lib .
+WORKDIR /evm/node/docker
+COPY ./node/docker .
 RUN \
     deno run -A prep.ts && \
     deno cache serve.ts
